--- a/percona-xtradb-cluster/v1.0.4.20200717/values.yaml
+++ b/percona-xtradb-cluster/v1.0.4.20200717/values.yaml
@@ -108,7 +108,7 @@ prometheus:
   ## Are you using [Prometheus Operator](https://coreos.com/operators/prometheus/docs/latest/user-guides/getting-started.html)?
   operator:
     ## Setting to true will create Prometheus-Operator specific resources like ServiceMonitors
-    enabled: false
+    enabled: true
 
     ## Configures alerts for Prometheus to pick up
     prometheusRule:
