--- a/percona-xtradb-cluster/templates/secrets.yaml
+++ b/percona-xtradb-cluster/templates/secrets.yaml
@@ -10,7 +10,7 @@ metadata:
 type: Opaque
 data:
   {{ if .Values.mysqlRootPassword }}
-  mysql-root-password:  {{ .Values.mysqlRootPassword | b64enc | quote }}
+  mysql-root-password:  {{ .Values.mysqlRootPassword | quote}}
   {{ else }}
   mysql-root-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{ end }}
