--- a/efk/v7.3.0.john/Chart.yaml
+++ b/efk/v7.3.0.john/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 description: EFK(Elasticsearch + Filebeat + Kibana)
 name: efk
-version: 7.3.0.poseidon-test
-appVersion: 7.3.0.poseidon-test
+version: 7.3.0.poseidon
+appVersion: 7.3.0.poseidon
 icon: file://../efk-logo.jpg
 sources:
 - https://www.elastic.co/products/elasticsearch
