--- a/kafka/questions.yaml
+++ b/kafka/questions.yaml
@@ -44,38 +44,30 @@ questions:
   group: "Zookeeper Settings"
 # Resource Configurations
 - variable: resources.limits.cpu
-  default: 300
+  default: 300m
   description: "CPU limit value (m)"
-  type: int
-  min: 300
-  max: 9999
+  type: string
   required: false
   label: CPU Limit
   group: "Resource Settings"
 - variable: resources.requests.cpu
-  default: 300
+  default: 300m
   description: "CPU request value (m)"
-  type: int
-  min: 300
-  max: 9999
+  type: string
   required: false
   label: CPU Request
   group: "Resource Settings"
 - variable: resources.limits.memory
-  default: 256
+  default: 256Mi
   description: "Memory limit value (Mi)"
-  type: int
-  min: 256
-  max: 9999
+  type: string
   required: false
   label: Memory Limit
   group: "Resource Settings"
 - variable: resources.requests.memory
-  default: 256
+  default: 256Mi
   description: "Memory request value (Mi)"
-  type: int
-  min: 256
-  max: 9999
+  type: string
   required: false
   label: Memory Request
   group: "Resource Settings"
