--- a/kafka/charts/zookeeper/values.yaml
+++ b/kafka/charts/zookeeper/values.yaml
@@ -152,19 +152,19 @@ auth:
   # existingSecret:
   ## Enable Zookeeper auth. It uses SASL/Digest-MD5
   ##
-  enabled: false
+  enabled: true
   ## User that will use Zookeeper clients to auth
   ##
-  clientUser:
+  clientUser: user
   ## Password that will use Zookeeper clients to auth
   ##
-  clientPassword:
+  clientPassword: ""
   ## Comma, semicolon or whitespace separated list of user to be created. Specify them as a string, for example: "user1,user2,admin"
   ##
-  serverUsers:
+  serverUsers: admin
   ## Comma, semicolon or whitespace separated list of passwords to assign to users when created. Specify them as a string, for example: "pass4user1, pass4user2, pass4admin"
   ##
-  serverPasswords:
+  serverPasswords: admin
 
 ## Size in MB for the Java Heap options (Xmx and XMs). This env var is ignored if Xmx an Xms are configured via JVMFLAGS
 ##
