--- a/kafka/kafka-debug/values.yaml
+++ b/kafka/kafka-debug/values.yaml
@@ -260,11 +260,11 @@ auth:
   jaas:
     ## Kafka client user
     ##
-    clientUser: admin
+    clientUser: user
 
     ## Kafka client password
     ##
-    clientPassword: admin
+    clientPassword: ""
 
     ## Kafka inter broker communication user
     ##
@@ -272,15 +272,15 @@ auth:
 
     ## Kafka inter broker communication password
     ##
-    interBrokerPassword: admin
+    interBrokerPassword: ""
 
     ## Kafka Zookeeper user
     ##
-    # zookeeperUser:
+    zookeeperUser: zookeeperUser
 
     ## Kafka Zookeeper password
     ##
-    # zookeeperPassword:
+    zookeeperPassword: zookeeperPassword
 
     ## Name of the existing secret containing credentials for clientUser, interBrokerUser and zookeeperUser.
     ## Create this secret running the command below where SECRET_NAME is the name of the secret you want to create:
@@ -394,24 +394,21 @@ resources:
 ## ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes
 ##
 livenessProbe:
-  enabled: true
+  tcpSocket:
+    port: kafka-client
   initialDelaySeconds: 10
   timeoutSeconds: 5
   # failureThreshold: 3
   # periodSeconds: 10
   # successThreshold: 1
 readinessProbe:
-  enabled: true
+  tcpSocket:
+    port: kafka-client
   initialDelaySeconds: 5
   failureThreshold: 6
   timeoutSeconds: 5
   # periodSeconds: 10
   # successThreshold: 1
-
-## Custom liveness/readiness probes that will override the default ones
-##
-customLivenessProbe: {}
-customReadinessProbe: {}
 
 ## Pod Disruption Budget configuration
 ## The PDB will only be created if replicaCount is greater than 1
@@ -881,16 +878,16 @@ zookeeper:
     enabled: true
     ## User that will use Zookeeper clients to auth
     ##
-    # clientUser:
+    clientUser: zookeeperUser
     ## Password that will use Zookeeper clients to auth
     ##
-    # clientPassword:
+    clientPassword: zookeeperPassword
     ## Comma, semicolon or whitespace separated list of user to be created. Specify them as a string, for example: "user1,user2,admin"
     ##
-    # serverUsers:
+    serverUsers: zookeeperUser
     ## Comma, semicolon or whitespace separated list of passwords to assign to users when created. Specify them as a string, for example: "pass4user1, pass4user2, pass4admin"
     ##
-    # serverPasswords:
+    serverPasswords: zookeeperPassword
 
 ## This value is only used when zookeeper.enabled is set to false
 ##
