--- a/kafka/kafka-debug/charts/zookeeper/values.yaml
+++ b/kafka/kafka-debug/charts/zookeeper/values.yaml
@@ -132,7 +132,7 @@ listenOnAllIPs: false
 
 ## Allow to accept connections from unauthenticated users
 ##
-allowAnonymousLogin: true
+allowAnonymousLogin: false
 
 autopurge:
   ## Retains the snapRetainCount most recent snapshots and the corresponding transaction logs and deletes the rest
