--- a/kafka/kafka-debug/questions.yaml
+++ b/kafka/kafka-debug/questions.yaml
@@ -32,6 +32,35 @@ questions:
   required: true
   label: Log retention time(hr)
   group: "Kafka Settings"
+# Resource Configurations
+- variable: resources.limits.cpu
+  default: 1500m
+  description: "CPU limit value (m)"
+  type: string
+  required: false
+  label: CPU Limit
+  group: "Kafka Settings"
+- variable: resources.requests.cpu
+  default: 1500m
+  description: "CPU request value (m)"
+  type: string
+  required: false
+  label: CPU Request
+  group: "Kafka Settings"
+- variable: resources.limits.memory
+  default: 1536Mi
+  description: "Memory limit value (Mi)"
+  type: string
+  required: false
+  label: Memory Limit
+  group: "Kafka Settings"
+- variable: resources.requests.memory
+  default: 1536Mi
+  description: "Memory request value (Mi)"
+  type: string
+  required: false
+  label: Memory Request
+  group: "Kafka Settings"
 # Zookeeper Configurations
 - variable: zookeeper.replicaCount
   default: 3
@@ -41,4 +70,33 @@ questions:
   max: 8
   required: true
   label: Zookeeper replica
+  group: "Zookeeper Settings"
+# Resource Configurations
+- variable: zookeeper.resources.limits.cpu
+  default: 1500m
+  description: "CPU limit value (m)"
+  type: string
+  required: false
+  label: CPU Limit
+  group: "Zookeeper Settings"
+- variable: zookeeper.resources.requests.cpu
+  default: 1500m
+  description: "CPU request value (m)"
+  type: string
+  required: false
+  label: CPU Request
+  group: "Zookeeper Settings"
+- variable: zookeeper.resources.limits.memory
+  default: 1536Mi
+  description: "Memory limit value (Mi)"
+  type: string
+  required: false
+  label: Memory Limit
+  group: "Zookeeper Settings"
+- variable: zookeeper.resources.requests.memory
+  default: 1536Mi
+  description: "Memory request value (Mi)"
+  type: string
+  required: false
+  label: Memory Request
   group: "Zookeeper Settings"
