--- a/rabbitmq/rabbitmq-debug/Chart.yaml
+++ b/rabbitmq/rabbitmq-debug/Chart.yaml
@@ -1,7 +1,7 @@
 name: rabbitmq
 apiVersion: v1
-appVersion: 3.8.5.debug
-version: 1.46.4
+appVersion: 3.8.5
+version: 1.46.4.debug
 description: Highly available RabbitMQ cluster, the open source message broker
   software that implements the Advanced Message Queuing Protocol (AMQP).
 keywords:
