- debug rabbitmq chart

--- a/rabbitmq/rabbitmq-debug/values.yaml
+++ b/rabbitmq/rabbitmq-debug/values.yaml
@@ -563,7 +563,7 @@ prometheus:
   ## Prometheus is using Operator.  Setting to true will create Operator specific resources like ServiceMonitors and Alerts
   operator:
     ## Are you using Prometheus Operator? [Blog Post](https://coreos.com/blog/the-prometheus-operator.html)
-    enabled: true
+    enabled: false
 
     ## Configures Alerts, which will be setup via Prometheus Operator / ConfigMaps.
     alerts:
