Revert "objective:mysql test"
This reverts commit 9e6ef0c3c1b781bd43ab99d1cbd0d7551d0896c4.

--- a/percona-xtradb-cluster/templates/statefulset.yaml
+++ b/percona-xtradb-cluster/templates/statefulset.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       initContainers:
       - name: "remove-lost-found"
-        image: "10.134.200.110:5000/busybox:latest"
+        image: "busybox:1.25.0"
         imagePullPolicy: IfNotPresent
         command:
         - "rm"
@@ -121,7 +121,7 @@ spec:
         {{- end }}
       {{ if .Values.logTail }}
       - name: "logs"
-        image: "10.134.200.110:5000/busybox:latest"
+        image: "busybox:1.25.0"
         imagePullPolicy: IfNotPresent
         command:
         - "tail"
