--- a/kafka/kafka-20200723/questions.yaml
+++ b/kafka/kafka-20200723/questions.yaml
@@ -34,28 +34,28 @@ questions:
   group: "Kafka Settings"
 # Resource Configurations
 - variable: resources.limits.cpu
-  default: 1000m
+  default: 250m
   description: "CPU limit value (m)"
   type: string
   required: false
   label: CPU Limit
   group: "Kafka Settings"
 - variable: resources.requests.cpu
-  default: 1000m
+  default: 250m
   description: "CPU request value (m)"
   type: string
   required: false
   label: CPU Request
   group: "Kafka Settings"
 - variable: resources.limits.memory
-  default: 1024Mi
+  default: 512Mi
   description: "Memory limit value (Mi)"
   type: string
   required: false
   label: Memory Limit
   group: "Kafka Settings"
 - variable: resources.requests.memory
-  default: 1024Mi
+  default: 512Mi
   description: "Memory request value (Mi)"
   type: string
   required: false
@@ -72,31 +72,31 @@ questions:
   label: Zookeeper replica
   group: "Zookeeper Settings"
 # Resource Configurations
-- variable: zookeeper.resources.limits.cpu
-  default: 1000m
-  description: "CPU limit value (m)"
-  type: string
-  required: false
-  label: CPU Limit
-  group: "Zookeeper Settings"
-- variable: zookeeper.resources.requests.cpu
-  default: 1000m
-  description: "CPU request value (m)"
-  type: string
-  required: false
-  label: CPU Request
-  group: "Zookeeper Settings"
-- variable: zookeeper.resources.limits.memory
-  default: 1024Mi
-  description: "Memory limit value (Mi)"
-  type: string
-  required: false
-  label: Memory Limit
-  group: "Zookeeper Settings"
-- variable: zookeeper.resources.requests.memory
-  default: 1024Mi
-  description: "Memory request value (Mi)"
-  type: string
-  required: false
-  label: Memory Request
-  group: "Zookeeper Settings"
+# - variable: zookeeper.resources.limits.cpu
+#   default: 250m
+#   description: "CPU limit value (m)"
+#   type: string
+#   required: false
+#   label: CPU Limit
+#   group: "Zookeeper Settings"
+# - variable: zookeeper.resources.requests.cpu
+#   default: 250m
+#   description: "CPU request value (m)"
+#   type: string
+#   required: false
+#   label: CPU Request
+#   group: "Zookeeper Settings"
+# - variable: zookeeper.resources.limits.memory
+#   default: 256Mi
+#   description: "Memory limit value (Mi)"
+#   type: string
+#   required: false
+#   label: Memory Limit
+#   group: "Zookeeper Settings"
+# - variable: zookeeper.resources.requests.memory
+#   default: 256Mi
+#   description: "Memory request value (Mi)"
+#   type: string
+#   required: false
+#   label: Memory Request
+#   group: "Zookeeper Settings"
