--- a/percona-xtradb-cluster/v1.0.4.20200717/templates/statefulset.yaml
+++ b/percona-xtradb-cluster/v1.0.4.20200717/templates/statefulset.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       initContainers:
       - name: "remove-lost-found"
-        image: "{{ .Values.global.registy_path }}/busybox:1.30.1"
+        image: "{{ .Values.global.registy_path }}/busybox:latest"
         imagePullPolicy: IfNotPresent
         command:
         - "rm"
@@ -121,7 +121,7 @@ spec:
         {{- end }}
       {{ if .Values.logTail }}
       - name: "logs"
-        image: "{{ .Values.global.registy_path }}/busybox:1.30.1"
+        image: "{{ .Values.global.registy_path }}/busybox:latest"
         imagePullPolicy: IfNotPresent
         command:
         - "tail"
