--- a/kafka/kafka-20200824/charts/zookeeper/values.yaml
+++ b/kafka/kafka-20200824/charts/zookeeper/values.yaml
@@ -288,6 +288,9 @@ resources:
   requests:
     memory: 256Mi
     cpu: 250m
+  limits:
+    memory: 1024Mi
+    cpu: 1000m
 
 ## Configure extra options for liveness and readiness probes
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes)
