--- a/kafka/kafka-20200824/values.yaml
+++ b/kafka/kafka-20200824/values.yaml
@@ -737,7 +737,7 @@ metrics:
   ## Prometheus JMX Exporter: exposes the majority of Kafkas metrics
   ##
   jmx:
-    enabled: false
+    enabled: true
 
     ## Bitnami JMX exporter image
     ## ref: https://hub.docker.com/r/bitnami/jmx-exporter/tags/
