--- a/kafka/kafka-20200824/templates/statefulset.yaml
+++ b/kafka/kafka-20200824/templates/statefulset.yaml
@@ -223,10 +223,10 @@ spec:
               value: {{ .Values.auth.jksPassword | quote }}
             {{- end }}
             {{- end }}
-            # {{- if .Values.metrics.jmx.enabled }}
-            # - name: JMX_PORT
-            #   value: "5555"
-            # {{- end }}
+            {{- if .Values.metrics.jmx.enabled }}
+            - name: JMX_PORT
+              value: "5555"
+            {{- end }}
             - name: KAFKA_CFG_DELETE_TOPIC_ENABLE
               value: {{ .Values.deleteTopicEnable | quote }}
             - name: KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE
