- enable rabbitmq Prometheus plugin

--- a/rabbitmq/rabbitmq-20200909/values.yaml
+++ b/rabbitmq/rabbitmq-20200909/values.yaml
@@ -267,7 +267,7 @@ rabbitmqWebSTOMPPlugin:
 ## Prometheus Plugin
 ## Ref: https://www.rabbitmq.com/prometheus.html
 rabbitmqPrometheusPlugin:
-  enabled: false
+  enabled: true
 
   ## NodePort
   nodePort: null
