- disable rabbitmq exporter

--- a/rabbitmq/rabbitmq-20200909/values.yaml
+++ b/rabbitmq/rabbitmq-20200909/values.yaml
@@ -539,7 +539,7 @@ env: {}
 prometheus:
   ## Configures Prometheus Exporter to expose and scrape stats.
   exporter:
-    enabled: true
+    enabled: false
     env: {}
     image:
       repository: kbudde/rabbitmq-exporter
