object: Modify redis chart.

--- a/redis/v9.0.2.0618/templates/redis-slave-statefulset.yaml
+++ b/redis/v9.0.2.0618/templates/redis-slave-statefulset.yaml
@@ -293,7 +293,7 @@ spec:
           mountPath: /opt/bitnami/redis-sentinel/etc
       {{- end }}
 {{- if .Values.metrics.enabled }}
-      - name: metrics
+      - name: zmetrics
         image: {{ template "redis.metrics.image" . }}
         imagePullPolicy: {{ .Values.metrics.image.pullPolicy | quote }}
         args:
