--- a/timescaledb-multinode/0.6.3.1012/templates/statefulset-timescaledb-datanode.yaml
+++ b/timescaledb-multinode/0.6.3.1012/templates/statefulset-timescaledb-datanode.yaml
@@ -33,7 +33,7 @@ spec:
         fsGroup: 1000
       initContainers:
       - name: initdb
-        image: "{{ .Value.global.registy_path }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        image: "{{ .Values.global.registy_path }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
         - name: POSTGRESQL_CUSTOM_PARAMETERS
