--- a/timescaledb-multinode/0.6.3.1012/templates/job-create-databases.yaml
+++ b/timescaledb-multinode/0.6.3.1012/templates/job-create-databases.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: createdb-{{ $index }}
-        image: postgres:11-alpine # A relatively small official image that can run psql
+        image: "{{ .Values.global.registy_path }}/postgres:11-alpine" # A relatively small official image that can run psql
         command:
           - sh
           - -c
