--- a/timescaledb-multinode/0.6.3.1012/values.yaml
+++ b/timescaledb-multinode/0.6.3.1012/values.yaml
@@ -1,5 +1,5 @@
 global:
-  registy_path: 
+  registy_path: 10.57.241.229:5000
 # This file and its contents are licensed under the Apache License 2.0.
 # Please see the included NOTICE for copyright information and LICENSE for a copy of the license.
 
