--- a/timescaledb-multinode/0.6.3.1012/templates/job-create-databases.yaml
+++ b/timescaledb-multinode/0.6.3.1012/templates/job-create-databases.yaml
@@ -1,6 +1,7 @@
 # This file and its contents are licensed under the Apache License 2.0.
 # Please see the included NOTICE for copyright information and LICENSE for a copy of the license.
-{{ $registy_path := .Values.global.registy_path }}
+
+{{ $registry_path := .Values.global.registry_path }}
 {{- range $index, $dbname := .Values.postgresql.databases }}
 ---
 apiVersion: batch/v1
@@ -26,7 +27,7 @@ spec:
     spec:
       containers:
       - name: createdb-{{ $index }}
-        image: "{{ $registy_path }}/postgres:11-alpine" # A relatively small official image that can run psql
+        image: "{{ $registry_path }}/postgres:11-alpine" # A relatively small official image that can run psql
         command:
           - sh
           - -c
