--- a/timescaledb-single/0.5.3/values.yaml
+++ b/timescaledb-single/0.5.3/values.yaml
@@ -201,7 +201,7 @@ callbacks:
 loadBalancer:
   # If not enabled, we still expose the primary using a so called Headless Service
   # https://kubernetes.io/docs/concepts/services-networking/service/#headless-services
-  enabled: True
+  enabled: False
   # Read more about the AWS annotations here:
   # https://kubernetes.io/docs/concepts/cluster-administration/cloud-providers/#aws
   # https://docs.aws.amazon.com/eks/latest/userguide/load-balancing.html
