--- a/kafka/kafka-debug/values.yaml
+++ b/kafka/kafka-debug/values.yaml
@@ -454,14 +454,14 @@ service:
   ## Set the LoadBalancer service type to internal only.
   ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#internal-load-balancer
   ##
-  # loadBalancerIP:
+  loadBalancerIP:
   ## Load Balancer sources
   ## ref: https://kubernetes.io/docs/tasks/access-application-cluster/configure-cloud-provider-firewall/#restrict-access-for-loadbalancer-service
   ## Example:
   ## loadBalancerSourceRanges:
   ## - 10.10.10.0/24
   ##
-  loadBalancerSourceRanges: []
+  # loadBalancerSourceRanges: []
   ## Provide any additional annotations which may be required. Evaluated as a template
   ##
   annotations: {}
