--- a/cassandra/6.0.0/requirements.yaml
+++ b/cassandra/6.0.0/requirements.yaml
@@ -1,5 +1,6 @@
 dependencies:
   - name: common
     version: 0.x.x
-    repository: http://10.57.241.229/hochiang/bitnami_charts/tree/master/bitnami
-
+    repository: http://10.57.241.229/hochiang/bitnami_charts
+    tags:
+      - bitnami-common
