--- a/cassandra-helm/templates/replicationcontroller.yaml
+++ b/cassandra-helm/templates/replicationcontroller.yaml
@@ -26,11 +26,7 @@ spec:
           image: "{{ .Values.image.repo }}:{{ .Values.image.tag }}"
           env:
             - name: CASSANDRA_SEEDS
-              {{- if .Values.hostNetwork }}
-              value: {{ required "You must fill \".Values.config.seeds\" with list of Cassandra seeds when hostNetwork is set to true" .Values.config.seeds | quote }}
-              {{- else }}
-              value: "{{- range $i, $e := until $seed_size }}{{ template "cassandra.fullname" $global }}-{{ $i }}.{{ template "cassandra.fullname" $global }}.{{ $global.Release.Namespace }}.svc.{{ $global.Values.config.cluster_domain }}{{- if (lt ( add1 $i ) $seed_size ) }},{{- end }}{{- end }}"
-              {{- end }}
+              value: 1
             - name: MAX_HEAP_SIZE
               value: {{ default "8192M" .Values.config.max_heap_size | quote }}
             - name: HEAP_NEWSIZE
