--- a/timescaledb-single/0.5.3.1030/values.yaml
+++ b/timescaledb-single/0.5.3.1030/values.yaml
@@ -272,15 +272,15 @@ persistentVolumes:
     #   storageClass: gp2
 
 
-resources: {}
+resources:
   # If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  limits:
+    cpu: 100m
+    memory: 128Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
 
 # timescaledb-tune will be run with the Pod resources requests or - if not set - its limits.
 # This should give a reasonably tuned PostgreSQL instance.
@@ -319,7 +319,7 @@ nodeSelector: {}
 # Prometheus exporter for PostgreSQL server metrics.
 # https://github.com/wrouesnel/postgres_exporter
 prometheus:
-  enabled: False
+  enabled: True
   image:
     repository: wrouesnel/postgres_exporter
     tag: v0.7.0
