--- a/harbor/v1.2.0/templates/core/core-cm.yaml
+++ b/harbor/v1.2.0/templates/core/core-cm.yaml
@@ -20,7 +20,7 @@ data:
   POSTGRESQL_SSLMODE: "{{ template "harbor.database.sslmode" . }}"
   POSTGRESQL_MAX_IDLE_CONNS: "{{ .Values.database.maxIdleConns }}"
   POSTGRESQL_MAX_OPEN_CONNS: "{{ .Values.database.maxOpenConns }}"
-  EXT_ENDPOINT: "{{ template "harbor.externalURL" . }}"
+  EXT_ENDPOINT: "http://{{ template "harbor.externalURL" . }}"
   CORE_URL: "http://{{ template "harbor.core" . }}"
   JOBSERVICE_URL: "http://{{ template "harbor.fullname" . }}-jobservice"
   REGISTRY_URL: "http://{{ template "harbor.registry" . }}:5000"
