--- a/harbor/v1.2.0/templates/registry/registry-cm.yaml
+++ b/harbor/v1.2.0/templates/registry/registry-cm.yaml
@@ -152,7 +152,7 @@ data:
     auth:
       token:
         issuer: harbor-token-issuer
-        realm: "{{ template "harbor.externalURL" . }}/service/token"
+        realm: "https://{{ template "harbor.externalURL" . }}/service/token"
         rootcertbundle: /etc/registry/root.crt
         service: harbor-registry
     validation:
