- rabbitmq user / password test

--- a/rabbitmq/rabbitmq-20200909-auth/values.yaml
+++ b/rabbitmq/rabbitmq-20200909-auth/values.yaml
@@ -5,7 +5,7 @@ global:
 ## Ref: http://rabbitmq.com/access-control.html
 ##
 rabbitmqUsername: admin
-# rabbitmqPassword:
+rabbitmqPassword: admin
 
 ## RabbitMQ Management user used for health checks
 managementUsername: management
