--- a/rabbitmq/rabbitmq-20200909/values.yaml
+++ b/rabbitmq/rabbitmq-20200909/values.yaml
@@ -4,8 +4,8 @@ global:
 ## RabbitMQ application credentials
 ## Ref: http://rabbitmq.com/access-control.html
 ##
-rabbitmqUsername: guest
-# rabbitmqPassword:
+rabbitmqUsername: admin
+rabbitmqPassword: admin
 
 ## RabbitMQ Management user used for health checks
 managementUsername: management
