- modify zookeeper config for none auth

--- a/kafka/kafka-20200824/charts/zookeeper/values.yaml
+++ b/kafka/kafka-20200824/charts/zookeeper/values.yaml
@@ -132,7 +132,7 @@ listenOnAllIPs: false
 
 ## Allow to accept connections from unauthenticated users
 ##
-allowAnonymousLogin: false
+allowAnonymousLogin: yes
 
 autopurge:
   ## Retains the snapRetainCount most recent snapshots and the corresponding transaction logs and deletes the rest
