objective: added persistent Volumes storageClass

--- a/timescaledb-single/0.5.3.1030/values.yaml
+++ b/timescaledb-single/0.5.3.1030/values.yaml
@@ -243,7 +243,7 @@ persistentVolumes:
     ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
     ##   GKE, AWS & OpenStack)
     ##
-    # storageClass: "-"
+    storageClass: "-"
     subPath: ""
     mountPath: "/var/lib/postgresql"
     annotations: {}
