- add efk https nodeport into service

--- a/efk/v7.3.0.john/charts/kibana/templates/service.yaml
+++ b/efk/v7.3.0.john/charts/kibana/templates/service.yaml
@@ -20,6 +20,10 @@ spec:
       protocol: TCP
       name: http
       targetPort: {{ .Values.httpPort }}
+    - port: 443
+      protocol: TCP
+      name: https
+      targetPort: {{ .Values.httpPort }}
   selector:
     app: {{ .Chart.Name }}
     release: {{ .Release.Name | quote }}
