--- a/kafka/11.2.2/values.yaml
+++ b/kafka/11.2.2/values.yaml
@@ -4,7 +4,7 @@
 ##
 global:
   imageRegistryEnable: false
-  # imageRegistry: myRegistryName
+  imageRegistry:
   # imagePullSecrets:
   #   - myRegistryKeySecretName
   # storageClass: myStorageClass
@@ -316,7 +316,7 @@ interBrokerListenerName: INTERNAL
 
 ## Number of Kafka brokers to deploy
 ##
-replicaCount: 1
+replicaCount: 3
 
 ## StrategyType, can be set to RollingUpdate or OnDelete by default.
 ## ref: https://kubernetes.io/docs/tutorials/stateful-application/basic-stateful-set/#updating-statefulsets
@@ -872,6 +872,7 @@ metrics:
 ##
 zookeeper:
   enabled: true
+  replicaCount: 3
   auth:
     ## Enable Zookeeper auth
     ##
