--- a/kafka/11.2.2/values.yaml
+++ b/kafka/11.2.2/values.yaml
@@ -737,7 +737,7 @@ metrics:
   ## Prometheus JMX Exporter: exposes the majority of Kafkas metrics
   ##
   jmx:
-    enabled: true
+    enabled: false
 
     ## Bitnami JMX exporter image
     ## ref: https://hub.docker.com/r/bitnami/jmx-exporter/tags/
